--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -148,14 +148,15 @@ function(ADD_EXAMPLE example_name example_file)
 endfunction()
 
 add_example(compute_rasterization examples/compute_rasterization.cpp)
-add_example(draw_indirect examples/draw_indirect.cpp)
-add_example(gpu_feedback examples/gpu_feedback.cpp)
+add_example(mesh_tool examples/mesh_tool.cpp)
+#add_example(draw_indirect examples/draw_indirect.cpp)
+#add_example(gpu_feedback examples/gpu_feedback.cpp)
 add_example(simple_rendering examples/simple_rendering.cpp)
-add_example(mesh_lod examples/mesh_lod.cpp)
+#add_example(mesh_lod examples/mesh_lod.cpp)
 add_example(simple_compute examples/simple_compute.cpp)
-add_example(oit examples/oit.cpp)
-add_example(virtual_textures examples/virtual_textures.cpp)
-add_example(sdf examples/sdf.cpp)
+#add_example(oit examples/oit.cpp)
+#add_example(virtual_textures examples/virtual_textures.cpp)
+#add_example(sdf examples/sdf.cpp)
 
 add_executable(tests tests.cpp)
 target_include_directories(tests
