--- a/imgui.ini
+++ b/imgui.ini
@@ -43,14 +43,14 @@ DockId=0x00000007,0
 
 [Window][DockSpace]
 Pos=0,0
-Size=512,512
+Size=2560,1417
 Collapsed=0
 
 [Window][Config]
-Pos=0,179
-Size=269,101
+Pos=0,241
+Size=583,388
 Collapsed=0
-DockId=0x00000020,0
+DockId=0x00000028,0
 
 [Window][sw rasterization]
 Pos=662,557
@@ -164,10 +164,10 @@ Size=338,256
 Collapsed=0
 
 [Window][Scene]
-Pos=0,282
-Size=269,230
+Pos=0,631
+Size=583,226
 Collapsed=0
-DockId=0x0000001B,0
+DockId=0x00000025,0
 
 [Window][Column row selection]
 Pos=0,283
@@ -192,67 +192,92 @@ Size=704,779
 Collapsed=0
 
 [Window][Compose Pass]
-Pos=0,282
-Size=269,230
+Pos=585,635
+Size=938,782
 Collapsed=0
-DockId=0x0000001B,3
+DockId=0x00000023,0
 
 [Window][Gizmo Pass]
-Pos=0,282
-Size=269,230
+Pos=0,631
+Size=583,226
 Collapsed=0
-DockId=0x0000001B,1
+DockId=0x00000025,1
 
 [Window][Gbuffer normal]
-Pos=0,0
-Size=269,177
+Pos=585,0
+Size=937,633
 Collapsed=0
 DockId=0x0000001F,0
 
 [Window][Gbuffer depth]
-Pos=0,282
-Size=269,230
+Pos=0,0
+Size=583,239
 Collapsed=0
-DockId=0x0000001B,2
+DockId=0x00000027,0
 
 [Window][Compute Gbuffer normal]
-Pos=271,0
-Size=241,512
+Pos=1525,635
+Size=1035,782
 Collapsed=0
-DockId=0x00000001,0
+DockId=0x00000024,0
+
+[Window][Render Pass]
+Pos=190,0
+Size=322,512
+Collapsed=0
+
+[Window][Baking Pass]
+Pos=0,859
+Size=583,558
+Collapsed=0
+DockId=0x00000026,0
+
+[Window][G.I. Compute GBuffer Pass]
+Pos=1524,0
+Size=1036,633
+Collapsed=0
+DockId=0x00000020,0
 
 [Docking][Data]
-DockSpace                     ID=0x09EF459F Window=0x9A404470 Pos=0,0 Size=512,512 Split=X
-  DockNode                    ID=0x00000018 Parent=0x09EF459F SizeRef=269,1387 Split=Y Selected=0x18B8C0DE
-    DockNode                  ID=0x0000001A Parent=0x00000018 SizeRef=1277,760 Split=Y Selected=0xD3262A4A
-      DockNode                ID=0x0000001F Parent=0x0000001A SizeRef=853,483 Selected=0xE46A3796
-      DockNode                ID=0x00000020 Parent=0x0000001A SizeRef=853,275 Selected=0xD3262A4A
-    DockNode                  ID=0x0000001B Parent=0x00000018 SizeRef=1277,625 Selected=0x290BE0CE
-  DockNode                    ID=0x00000019 Parent=0x09EF459F SizeRef=241,1387 Split=Y
-    DockNode                  ID=0x00000004 Parent=0x00000019 SizeRef=1920,126 Split=X Selected=0x2B5F260E
-      DockNode                ID=0x0000001C Parent=0x00000004 SizeRef=1194,508 Selected=0xC90DB54B
-      DockNode                ID=0x0000001D Parent=0x00000004 SizeRef=724,508 Selected=0x2B5F260E
-    DockNode                  ID=0x00000005 Parent=0x00000019 SizeRef=1920,384 Split=X
-      DockNode                ID=0x00000016 Parent=0x00000005 SizeRef=307,1038 Selected=0xD3262A4A
-      DockNode                ID=0x00000017 Parent=0x00000005 SizeRef=203,1038 Split=Y
-        DockNode              ID=0x00000014 Parent=0x00000017 SizeRef=1920,794 Selected=0xCE70D424
-        DockNode              ID=0x00000015 Parent=0x00000017 SizeRef=1920,242 Split=X
-          DockNode            ID=0x00000012 Parent=0x00000015 SizeRef=608,1038 Split=Y
-            DockNode          ID=0x0000000A Parent=0x00000012 SizeRef=1920,804 Split=X Selected=0xD3262A4A
-              DockNode        ID=0x0000000C Parent=0x0000000A SizeRef=1287,197 Split=X Selected=0xD3262A4A
-                DockNode      ID=0x0000000E Parent=0x0000000C SizeRef=671,522 Split=X Selected=0x93643EC0
-                  DockNode    ID=0x00000010 Parent=0x0000000E SizeRef=662,843 Selected=0x93643EC0
-                  DockNode    ID=0x00000011 Parent=0x0000000E SizeRef=689,843 Selected=0xC62906FD
-                DockNode      ID=0x0000000F Parent=0x0000000C SizeRef=614,522 Selected=0x7AE6544D
-              DockNode        ID=0x0000000D Parent=0x0000000A SizeRef=631,197 Selected=0x049DDB72
-            DockNode          ID=0x0000000B Parent=0x00000012 SizeRef=1920,24 Split=X
-              DockNode        ID=0x00000006 Parent=0x0000000B SizeRef=332,1038 Split=X Selected=0xD3262A4A
-                DockNode      ID=0x00000008 Parent=0x00000006 SizeRef=1292,1038 Split=Y Selected=0x961573DF
-                  DockNode    ID=0x00000003 Parent=0x00000008 SizeRef=224,256 Split=Y
-                    DockNode  ID=0x00000001 Parent=0x00000003 SizeRef=228,256 CentralNode=1 Selected=0x519AB3AB
-                    DockNode  ID=0x00000002 Parent=0x00000003 SizeRef=228,254 Selected=0x46B5E99C
-                  DockNode    ID=0x0000001E Parent=0x00000008 SizeRef=224,254 Selected=0x593C5C9B
-                DockNode      ID=0x00000009 Parent=0x00000006 SizeRef=626,1038 Selected=0xB39CC568
-              DockNode        ID=0x00000007 Parent=0x0000000B SizeRef=1586,1038 Selected=0x0DA19904
-          DockNode            ID=0x00000013 Parent=0x00000015 SizeRef=1310,1038 Selected=0x48642754
+DockSpace                         ID=0x09EF459F Window=0x9A404470 Pos=0,0 Size=2560,1417 Split=X
+  DockNode                        ID=0x00000018 Parent=0x09EF459F SizeRef=583,1387 Split=Y Selected=0x18B8C0DE
+    DockNode                      ID=0x0000001A Parent=0x00000018 SizeRef=1277,629 Split=Y Selected=0xD3262A4A
+      DockNode                    ID=0x00000027 Parent=0x0000001A SizeRef=583,239 Selected=0xAFC7D0D1
+      DockNode                    ID=0x00000028 Parent=0x0000001A SizeRef=583,388 Selected=0xD3262A4A
+    DockNode                      ID=0x0000001B Parent=0x00000018 SizeRef=1277,786 Split=Y Selected=0x18B8C0DE
+      DockNode                    ID=0x00000025 Parent=0x0000001B SizeRef=583,226 Selected=0x18B8C0DE
+      DockNode                    ID=0x00000026 Parent=0x0000001B SizeRef=583,558 Selected=0x8AAB593D
+  DockNode                        ID=0x00000019 Parent=0x09EF459F SizeRef=1975,1387 Split=Y
+    DockNode                      ID=0x00000004 Parent=0x00000019 SizeRef=1920,126 Split=X Selected=0x2B5F260E
+      DockNode                    ID=0x0000001C Parent=0x00000004 SizeRef=1194,508 Selected=0xC90DB54B
+      DockNode                    ID=0x0000001D Parent=0x00000004 SizeRef=724,508 Selected=0x2B5F260E
+    DockNode                      ID=0x00000005 Parent=0x00000019 SizeRef=1920,384 Split=X
+      DockNode                    ID=0x00000016 Parent=0x00000005 SizeRef=307,1038 Selected=0xD3262A4A
+      DockNode                    ID=0x00000017 Parent=0x00000005 SizeRef=203,1038 Split=Y
+        DockNode                  ID=0x00000014 Parent=0x00000017 SizeRef=1920,794 Selected=0xCE70D424
+        DockNode                  ID=0x00000015 Parent=0x00000017 SizeRef=1920,242 Split=X
+          DockNode                ID=0x00000012 Parent=0x00000015 SizeRef=608,1038 Split=Y
+            DockNode              ID=0x0000000A Parent=0x00000012 SizeRef=1920,804 Split=X Selected=0xD3262A4A
+              DockNode            ID=0x0000000C Parent=0x0000000A SizeRef=1287,197 Split=X Selected=0xD3262A4A
+                DockNode          ID=0x0000000E Parent=0x0000000C SizeRef=671,522 Split=X Selected=0x93643EC0
+                  DockNode        ID=0x00000010 Parent=0x0000000E SizeRef=662,843 Selected=0x93643EC0
+                  DockNode        ID=0x00000011 Parent=0x0000000E SizeRef=689,843 Selected=0xC62906FD
+                DockNode          ID=0x0000000F Parent=0x0000000C SizeRef=614,522 Selected=0x7AE6544D
+              DockNode            ID=0x0000000D Parent=0x0000000A SizeRef=631,197 Selected=0x049DDB72
+            DockNode              ID=0x0000000B Parent=0x00000012 SizeRef=1920,24 Split=X
+              DockNode            ID=0x00000006 Parent=0x0000000B SizeRef=332,1038 Split=X Selected=0xD3262A4A
+                DockNode          ID=0x00000008 Parent=0x00000006 SizeRef=1292,1038 Split=Y Selected=0x961573DF
+                  DockNode        ID=0x00000003 Parent=0x00000008 SizeRef=224,256 Split=Y
+                    DockNode      ID=0x00000001 Parent=0x00000003 SizeRef=228,256 Split=Y Selected=0x519AB3AB
+                      DockNode    ID=0x00000021 Parent=0x00000001 SizeRef=1615,633 Split=X Selected=0xE8D97491
+                        DockNode  ID=0x0000001F Parent=0x00000021 SizeRef=937,633 Selected=0xE46A3796
+                        DockNode  ID=0x00000020 Parent=0x00000021 SizeRef=1036,633 Selected=0xE8D97491
+                      DockNode    ID=0x00000022 Parent=0x00000001 SizeRef=1615,782 Split=X Selected=0x519AB3AB
+                        DockNode  ID=0x00000023 Parent=0x00000022 SizeRef=938,782 Selected=0x290BE0CE
+                        DockNode  ID=0x00000024 Parent=0x00000022 SizeRef=1035,782 CentralNode=1 Selected=0x519AB3AB
+                    DockNode      ID=0x00000002 Parent=0x00000003 SizeRef=228,254 Selected=0x46B5E99C
+                  DockNode        ID=0x0000001E Parent=0x00000008 SizeRef=224,254 Selected=0x593C5C9B
+                DockNode          ID=0x00000009 Parent=0x00000006 SizeRef=626,1038 Selected=0xB39CC568
+              DockNode            ID=0x00000007 Parent=0x0000000B SizeRef=1586,1038 Selected=0x0DA19904
+          DockNode                ID=0x00000013 Parent=0x00000015 SizeRef=1310,1038 Selected=0x48642754
 
