--- a/imgui.ini
+++ b/imgui.ini
@@ -43,12 +43,12 @@ DockId=0x00000007,0
 
 [Window][DockSpace]
 Pos=0,0
-Size=1440,2537
+Size=2560,1417
 Collapsed=0
 
 [Window][Config]
-Pos=0,1115
-Size=369,712
+Pos=0,623
+Size=543,397
 Collapsed=0
 DockId=0x00000023,0
 
@@ -165,7 +165,7 @@ Collapsed=0
 
 [Window][Scene]
 Pos=0,0
-Size=369,1113
+Size=543,621
 Collapsed=0
 DockId=0x00000022,0
 
@@ -243,69 +243,79 @@ Collapsed=0
 DockId=0x00000029,1
 
 [Window][GBuffer.Normal]
-Pos=371,1193
-Size=1069,1344
+Pos=545,764
+Size=1021,653
 Collapsed=0
-DockId=0x00000027,0
+DockId=0x0000002B,0
 
 [Window][GBuffer.Depth]
-Pos=0,1829
-Size=369,708
+Pos=1568,764
+Size=992,653
 Collapsed=0
-DockId=0x00000024,1
+DockId=0x0000002C,0
 
 [Window][Gizmo.RT]
-Pos=0,1829
-Size=369,708
+Pos=0,1022
+Size=543,395
 Collapsed=0
 DockId=0x00000024,0
 
 [Window][Compose.RT]
-Pos=371,0
-Size=1069,1191
+Pos=545,0
+Size=1018,762
 Collapsed=0
-DockId=0x00000026,0
+DockId=0x00000028,0
+
+[Window][HiZ]
+Pos=1565,0
+Size=995,762
+Collapsed=0
+DockId=0x0000002A,0
 
 [Docking][Data]
-DockSpace                         ID=0x09EF459F Window=0x9A404470 Pos=0,0 Size=1440,2537 Split=X
-  DockNode                        ID=0x00000018 Parent=0x09EF459F SizeRef=293,1387 Split=Y Selected=0x18B8C0DE
-    DockNode                      ID=0x0000001A Parent=0x00000018 SizeRef=1277,621 Split=Y Selected=0xCFB8D5A0
-      DockNode                    ID=0x00000021 Parent=0x0000001A SizeRef=604,328 Selected=0x519AB3AB
-      DockNode                    ID=0x00000022 Parent=0x0000001A SizeRef=604,291 Selected=0x18B8C0DE
-    DockNode                      ID=0x0000001B Parent=0x00000018 SizeRef=1277,794 Split=Y Selected=0xD3262A4A
-      DockNode                    ID=0x00000025 Parent=0x0000001B SizeRef=604,474 Split=Y Selected=0xD3262A4A
-        DockNode                  ID=0x00000023 Parent=0x00000025 SizeRef=270,312 Selected=0xD3262A4A
-        DockNode                  ID=0x00000024 Parent=0x00000025 SizeRef=270,310 Selected=0x4C3D455D
-      DockNode                    ID=0x00000029 Parent=0x0000001B SizeRef=604,318 Selected=0xAFC7D0D1
-  DockNode                        ID=0x00000019 Parent=0x09EF459F SizeRef=849,1387 Split=Y
-    DockNode                      ID=0x00000004 Parent=0x00000019 SizeRef=1920,126 Split=X Selected=0x2B5F260E
-      DockNode                    ID=0x0000001C Parent=0x00000004 SizeRef=1194,508 Selected=0xC90DB54B
-      DockNode                    ID=0x0000001D Parent=0x00000004 SizeRef=724,508 Selected=0x2B5F260E
-    DockNode                      ID=0x00000005 Parent=0x00000019 SizeRef=1920,384 Split=X
-      DockNode                    ID=0x00000016 Parent=0x00000005 SizeRef=307,1038 Selected=0xD3262A4A
-      DockNode                    ID=0x00000017 Parent=0x00000005 SizeRef=203,1038 Split=Y
-        DockNode                  ID=0x00000014 Parent=0x00000017 SizeRef=1920,794 Selected=0xCE70D424
-        DockNode                  ID=0x00000015 Parent=0x00000017 SizeRef=1920,242 Split=X
-          DockNode                ID=0x00000012 Parent=0x00000015 SizeRef=608,1038 Split=Y
-            DockNode              ID=0x0000000A Parent=0x00000012 SizeRef=1920,804 Split=X Selected=0xD3262A4A
-              DockNode            ID=0x0000000C Parent=0x0000000A SizeRef=1287,197 Split=X Selected=0xD3262A4A
-                DockNode          ID=0x0000000E Parent=0x0000000C SizeRef=671,522 Split=X Selected=0x93643EC0
-                  DockNode        ID=0x00000010 Parent=0x0000000E SizeRef=662,843 Selected=0x93643EC0
-                  DockNode        ID=0x00000011 Parent=0x0000000E SizeRef=689,843 Selected=0xC62906FD
-                DockNode          ID=0x0000000F Parent=0x0000000C SizeRef=614,522 Selected=0x7AE6544D
-              DockNode            ID=0x0000000D Parent=0x0000000A SizeRef=631,197 Selected=0x049DDB72
-            DockNode              ID=0x0000000B Parent=0x00000012 SizeRef=1920,24 Split=X
-              DockNode            ID=0x00000006 Parent=0x0000000B SizeRef=332,1038 Split=X Selected=0xD3262A4A
-                DockNode          ID=0x00000008 Parent=0x00000006 SizeRef=1292,1038 Split=Y Selected=0x961573DF
-                  DockNode        ID=0x00000003 Parent=0x00000008 SizeRef=224,256 Split=Y
-                    DockNode      ID=0x00000001 Parent=0x00000003 SizeRef=228,256 Split=Y Selected=0xE8D97491
-                      DockNode    ID=0x0000001F Parent=0x00000001 SizeRef=1098,1269 Split=Y Selected=0x2F2B1E91
-                        DockNode  ID=0x00000026 Parent=0x0000001F SizeRef=1069,1191 CentralNode=1 Selected=0x2F2B1E91
-                        DockNode  ID=0x00000027 Parent=0x0000001F SizeRef=1069,1344 Selected=0x00870208
-                      DockNode    ID=0x00000020 Parent=0x00000001 SizeRef=1098,1266 Selected=0x290BE0CE
-                    DockNode      ID=0x00000002 Parent=0x00000003 SizeRef=228,254 Selected=0x46B5E99C
-                  DockNode        ID=0x0000001E Parent=0x00000008 SizeRef=224,254 Selected=0x593C5C9B
-                DockNode          ID=0x00000009 Parent=0x00000006 SizeRef=626,1038 Selected=0xB39CC568
-              DockNode            ID=0x00000007 Parent=0x0000000B SizeRef=1586,1038 Selected=0x0DA19904
-          DockNode                ID=0x00000013 Parent=0x00000015 SizeRef=1310,1038 Selected=0x48642754
+DockSpace                           ID=0x09EF459F Window=0x9A404470 Pos=0,0 Size=2560,1417 Split=X
+  DockNode                          ID=0x00000018 Parent=0x09EF459F SizeRef=305,1387 Split=Y Selected=0x18B8C0DE
+    DockNode                        ID=0x0000001A Parent=0x00000018 SizeRef=1277,621 Split=Y Selected=0xCFB8D5A0
+      DockNode                      ID=0x00000021 Parent=0x0000001A SizeRef=604,328 Selected=0x519AB3AB
+      DockNode                      ID=0x00000022 Parent=0x0000001A SizeRef=604,291 Selected=0x18B8C0DE
+    DockNode                        ID=0x0000001B Parent=0x00000018 SizeRef=1277,794 Split=Y Selected=0xD3262A4A
+      DockNode                      ID=0x00000025 Parent=0x0000001B SizeRef=604,474 Split=Y Selected=0xD3262A4A
+        DockNode                    ID=0x00000023 Parent=0x00000025 SizeRef=270,312 Selected=0xD3262A4A
+        DockNode                    ID=0x00000024 Parent=0x00000025 SizeRef=270,310 Selected=0x2652A674
+      DockNode                      ID=0x00000029 Parent=0x0000001B SizeRef=604,318 Selected=0xAFC7D0D1
+  DockNode                          ID=0x00000019 Parent=0x09EF459F SizeRef=1133,1387 Split=Y
+    DockNode                        ID=0x00000004 Parent=0x00000019 SizeRef=1920,126 Split=X Selected=0x2B5F260E
+      DockNode                      ID=0x0000001C Parent=0x00000004 SizeRef=1194,508 Selected=0xC90DB54B
+      DockNode                      ID=0x0000001D Parent=0x00000004 SizeRef=724,508 Selected=0x2B5F260E
+    DockNode                        ID=0x00000005 Parent=0x00000019 SizeRef=1920,384 Split=X
+      DockNode                      ID=0x00000016 Parent=0x00000005 SizeRef=307,1038 Selected=0xD3262A4A
+      DockNode                      ID=0x00000017 Parent=0x00000005 SizeRef=203,1038 Split=Y
+        DockNode                    ID=0x00000014 Parent=0x00000017 SizeRef=1920,794 Selected=0xCE70D424
+        DockNode                    ID=0x00000015 Parent=0x00000017 SizeRef=1920,242 Split=X
+          DockNode                  ID=0x00000012 Parent=0x00000015 SizeRef=608,1038 Split=Y
+            DockNode                ID=0x0000000A Parent=0x00000012 SizeRef=1920,804 Split=X Selected=0xD3262A4A
+              DockNode              ID=0x0000000C Parent=0x0000000A SizeRef=1287,197 Split=X Selected=0xD3262A4A
+                DockNode            ID=0x0000000E Parent=0x0000000C SizeRef=671,522 Split=X Selected=0x93643EC0
+                  DockNode          ID=0x00000010 Parent=0x0000000E SizeRef=662,843 Selected=0x93643EC0
+                  DockNode          ID=0x00000011 Parent=0x0000000E SizeRef=689,843 Selected=0xC62906FD
+                DockNode            ID=0x0000000F Parent=0x0000000C SizeRef=614,522 Selected=0x7AE6544D
+              DockNode              ID=0x0000000D Parent=0x0000000A SizeRef=631,197 Selected=0x049DDB72
+            DockNode                ID=0x0000000B Parent=0x00000012 SizeRef=1920,24 Split=X
+              DockNode              ID=0x00000006 Parent=0x0000000B SizeRef=332,1038 Split=X Selected=0xD3262A4A
+                DockNode            ID=0x00000008 Parent=0x00000006 SizeRef=1292,1038 Split=Y Selected=0x961573DF
+                  DockNode          ID=0x00000003 Parent=0x00000008 SizeRef=224,256 Split=Y
+                    DockNode        ID=0x00000001 Parent=0x00000003 SizeRef=228,256 Split=Y Selected=0xE8D97491
+                      DockNode      ID=0x0000001F Parent=0x00000001 SizeRef=1098,1269 Split=Y Selected=0x2F2B1E91
+                        DockNode    ID=0x00000026 Parent=0x0000001F SizeRef=1069,762 Split=X Selected=0x2F2B1E91
+                          DockNode  ID=0x00000028 Parent=0x00000026 SizeRef=1018,812 CentralNode=1 Selected=0x2F2B1E91
+                          DockNode  ID=0x0000002A Parent=0x00000026 SizeRef=995,812 Selected=0xBE496D6E
+                        DockNode    ID=0x00000027 Parent=0x0000001F SizeRef=1069,653 Split=X Selected=0x00870208
+                          DockNode  ID=0x0000002B Parent=0x00000027 SizeRef=1021,546 Selected=0x00870208
+                          DockNode  ID=0x0000002C Parent=0x00000027 SizeRef=992,546 Selected=0x4C3D455D
+                      DockNode      ID=0x00000020 Parent=0x00000001 SizeRef=1098,1266 Selected=0x290BE0CE
+                    DockNode        ID=0x00000002 Parent=0x00000003 SizeRef=228,254 Selected=0x46B5E99C
+                  DockNode          ID=0x0000001E Parent=0x00000008 SizeRef=224,254 Selected=0x593C5C9B
+                DockNode            ID=0x00000009 Parent=0x00000006 SizeRef=626,1038 Selected=0xB39CC568
+              DockNode              ID=0x00000007 Parent=0x0000000B SizeRef=1586,1038 Selected=0x0DA19904
+          DockNode                  ID=0x00000013 Parent=0x00000015 SizeRef=1310,1038 Selected=0x48642754
 
